cabal-version:      3.4
name:               hello-opengl
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Andrey Krainyak
maintainer:         mode.andrew@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable hello-opengl
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0
      , OpenGL
      , GLFW-b
      , linear
      , reactive-banana
    hs-source-dirs:   app
    default-language: GHC2021
